--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "electron": "^13.1.7",
     "pug-cli": "^1.0.0-alpha6",
     "sass": "^1.37.0"
+  },
+  "dependencies": {
+    "child_process": "^1.0.2",
+    "python-shell": "^3.0.0"
   }
 }
