--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "electron .",
     "compile-pug": "pug pug --out html",
     "compile-sass": "sass --update sass/main.sass:css/main.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "Brazoswood Goddard Program 2021-2022",
   "license": "ISC",
   "devDependencies": {
     "electron": "^13.1.7",
+    "mocha": "^9.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "sass": "^1.37.0"
   },
